# led_light

./: sdkconfig  sdkconfig.old
components/app_bridge/: CMakeLists.txt  app_bridge.c
components/app_rainmaker/: CMakeLists.txt  app_rainmaker.c
components/app_sensor/: CMakeLists.txt  Kconfig.projbuild  app_mesh_light.c  app_mesh_light.h  app_sensor.c  app_sensor.h  idf_component.yml
components/app_wifi/: app_wifi.c  app_wifi.h
components/mesh_send/: app_espnow.c  app_espnow.h
main/: app_main.c  idf_component.yml
partition_table/: partitions_4MB.csv
